<resources>
    <string name="app_name">MotoFix</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="userField">Usuario</string>
    <string name="passField">Contraseña</string>
    <string name="logIn">Iniciar Sesión</string>
    <string name="registrer">Crear Cuenta</string>
    <string name="rcrUser">Recordar Usuario</string>
    <string name="birthdayField">Fecha de Nacimiento</string>
    <string name="back">Volver</string>
    <string name="navigation_drawer_open">Abierto</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="title_activity_moto_edit">MotoEdit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>