<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/tittleContainer"
            style="@style/tittleContainer"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtLogin"
                style="@style/tittleText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/logIn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fieldContainer"
            style="@style/fieldContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColorHint="@color/lightWhite"
                app:boxStrokeColor="@color/aqua"
                app:hintTextColor="@color/aqua">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    style="@style/fieldInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                style="@style/passContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passInput"
                    style="@style/fieldInputTextPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:hint="@string/passField" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/rcUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/gray"
                android:text="@string/rcrUser"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginButton_Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:text="@string/logIn"
                    android:textColor="@color/lightWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/registerButton_Login"
                    style="@style/buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrer" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>